sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Package_Table_Assignment__mdt/SFDC_Industry_Package_Table_Assignment__mdt.object-meta.xml
<CustomObject>
    <description>Order the sequence of installable packages from the Schema Org available for subscriber org</description>
    <label>SFDC Industry Package Table Assignment</label>
    <pluralLabel>SFDC Industry Package Table Assignments</pluralLabel>
</CustomObject>