sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Package_Table_Assignment__mdt/fields/Description_Label__c.field-meta.xml
<CustomField>
    <fullName>Description_Label__c</fullName>
    <label>Description Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>