sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Package_Table_Assignment__mdt/fields/Package_Name__c.field-meta.xml
<CustomField>
    <fullName>Package_Name__c</fullName>
    <label>Package Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>