sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Package_Table_Assignment__mdt/fields/Selected__c.field-meta.xml
<CustomField>
    <fullName>Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected</label>
    <type>Checkbox</type>
</CustomField>